# ConsoleGameCPP

./: .gitignore  CMakeLists.txt  README.md
ConsoleGameCPP/: CMakeLists.txt  ConsoleGameCpp.cpp  Food.cpp  Food.h  GameObject.cpp  GameObject.h  RandomNum.cpp  RandomNum.h  Settings.h  Snake.cpp  Snake.h  Timer.h  Tools.h  ansi_escapes.c  ansi_escapes.h  directions.h
ConsoleGameCPP/Release/ConsoleGameCPP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleGameCPP.lastbuildstate  ConsoleGameCPP.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Linux/: Build.sh
Windows/: BuildGCC.bat  MakeSln.bat
